<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="general_settings"
        android:title="@string/general_settings">

        <Preference
            android:key="game_files"
            android:title="@string/game_files"
            />

        <Preference
            android:title="@string/mods"
            android:key="pref_mods"
            />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/category_performance">
    
        <CheckBoxPreference
            android:key="terrain_key"
            android:title="Enable remote landscape"
            android:summary="This option increases the maximum rendering distance"/>
        
        <CheckBoxPreference
            android:key="preload_key"
            android:title="Enable shadow loading of locations"
            android:summary="Speeds up loading of locations while traveling, but reduces performance"/>
        
        <CheckBoxPreference
            android:key="shadows_key"
            android:title="Enable player and NPC shadows"
            android:summary="Enables shadows for the player and all NPCs and creatures (Stable)"/>
        
        <CheckBoxPreference
            android:key="shadowso_key"
            android:title="Enable object shadows"
            android:summary="Requires player and NPC shadows to be ENABLED! (Unstable)"/>
        
        <CheckBoxPreference
            android:key="sp_key"
            android:title="Enable soft particles"
            android:summary="Improves scene lighting"/>
        
        <CheckBoxPreference
            android:key="tn_key"
            android:title="Enable NormalMap for terrain"
            android:summary="3D textures for terrain (Requires _n.dds textures in cache)"/>
        
        <CheckBoxPreference
            android:key="on_key"
            android:title="Enable NormalMap for objects"
            android:summary="3D textures for objects (Requires _n.dds textures in cache)"/>
        
        <CheckBoxPreference
            android:key="ts_key"
            android:title="Enable SpecularMap for terrain"
            android:summary="Reflection textures for terrain (Requires _spec.dds textures in cache)"/>
        
        <CheckBoxPreference
            android:key="os_key"
            android:title="Enable SpecularMap for objects"
            android:summary="Reflection textures for objects (Requires _spec.dds textures in cache)"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_ui">
        <Preference
            android:title="@string/action_show_screen_controls"
            android:key="pref_controls"
            />
        
        <EditTextPreference
            android:key="pref_uiScaling"
            android:title="@string/pref_uiScaling"
            android:dialogTitle="@string/pref_uiScaling"
            android:inputType="numberDecimal"
            android:hint="1.5"
            />

        <ListPreference
            android:key="pref_mouse_mode"
            android:title="@string/pref_mouse_mode"
            android:dialogTitle="@string/pref_mouse_mode"
            android:entries="@array/pref_mouse_mode_entries"
            android:entryValues="@array/pref_mouse_mode_values"
            android:defaultValue="@string/pref_mouse_mode_default"
            android:summary="%s"
            />
        
        <CheckBoxPreference
            android:key="gyroscope_key"
            android:title="Enable gyro control"/>
        
        <CheckBoxPreference
            android:key="pref_hide_controls"
            android:title="@string/pref_hide_controls" />

        <CheckBoxPreference
            android:key="pref_always_show_top_bar"
            android:title="@string/pref_always_show_top_bar" />

        <CheckBoxPreference
            android:key="pref_show_qp"
            android:title="@string/pref_show_qp" />

        <CheckBoxPreference
            android:key="pref_show_fn"
            android:title="@string/pref_show_fn" />

        <CheckBoxPreference
            android:key="pref_screen_keeper"
            android:title="@string/pref_screen_keeper"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_graphics">
        <EditTextPreference
            android:key="pref_customResolution"
            android:title="@string/pref_customResolution"
            android:dialogTitle="@string/pref_customResolution"
            android:hint="640x480"
            />

        <CheckBoxPreference
            android:key="pref_display_cutout_area"
            android:title="@string/pref_display_cutout_area"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="pref_avoid16bits"
            android:title="@string/pref_avoid16bits" 
            android:summary="Warning! Experimental option, may lead to graphical distortions"
            android:defaultValue="true"/>

        <ListPreference
            android:key="pref_textureShrinking_v2"
            android:title="@string/pref_textureShrinking"
            android:dialogTitle="@string/pref_textureShrinking"
            android:entries="@array/pref_textureShrinking_entries"
            android:entryValues="@array/pref_textureShrinking_values"
            android:defaultValue="@string/pref_textureShrinking_default"
            android:summary="%s"
        />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_advanced">
        
        <ListPreference
            android:key="pref_encoding"
            android:summary="%s"
            android:title="@string/pref_encoding"
            android:dialogTitle="@string/pref_encoding"
            android:entries="@array/pref_encoding_entries"
            android:entryValues="@array/pref_encoding_values"
            android:defaultValue="@string/pref_encoding_default"
            />
        
        <EditTextPreference
            android:key="commandLine"
            android:title="@string/pref_commandLine"
            />

        <EditTextPreference
            android:key="envLine"
            android:title="@string/pref_envLine"
            />

    </PreferenceCategory>

</PreferenceScreen>
